refactor: mejorar la construcción del contenido del correo de restablecimiento de contraseña
- Se ha modificado la forma en que se construye el contenido del correo de restablecimiento de contraseña, utilizando un template para mayor claridad y mantenimiento.
- Se corrigió un error en la sintaxis del estilo CSS en el template HTML.
- Se implementó el método String.format para insertar los valores de nombre y código en el contenido del correo.